--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.3",
     "daisyui": "^5.0.6",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
